# curlbot_v2

./: .envrc  .gitignore  HlprBot.py  README.md  curlbot_v2.code-workspace  pyproject.toml  run_curlbot.sh  systemd_setup.md
src/curlbot_v2/: _routine_checker.py  _submission_helpers.py  curlbot.py  systemd_setup.md
src/curlbot_v2/actions/: __init__.py  _action.py  _routine_checker.py  _sign_of_life.py
tests/: test_basic_bot_actions.py  test_curlbot_v2.py  test_routine_checker.py  test_sign_of_life.py  test_submission_helpers.py
