[tool.poetry]
name = "curlbot_v2"
version = "0.1.0"
description = ""
authors = ["Katie Doroschak <k.doroschak@gmail.com>"]
packages = [
    {include="curlbot_v2", from="src"}
]

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.0"
PyYAML = "^6.0"
schedule = "^1.1.0"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^23.1.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=99

[tool.isort]
line_length = 99
profile = "black"
src_paths = "src"
