[tool.poetry]
name = "curlbot_v2"
version = "0.1.0"
description = ""
authors = ["Katie Doroschak <k.doroschak@gmail.com>"]
packages = [
    {include="curlbot_v2", from="src"}
]

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.0"
PyYAML = "^6.0"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^24.3.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
pytest-cov = "^4.1.0"
urllib3 = "^2.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=99

[tool.isort]
line_length = 99
profile = "black"
src_paths = "src"
